--- a/index.html
+++ b/index.html
@@ -9,21 +9,36 @@
   <link rel="stylesheet" href="css/css.css">
 
   <!--引入初始化 Parse 的 js 檔案-->
-  <script type="text/javascript" src="<!--引入初始化 Parse 的 js 檔案-->"></script>
+  <script type="text/javascript" src="js/key.js"></script>
   <script  type="text/javascript">
+
   
     $(document).ready(function(){
       /* 顯示登入者名稱，避免未登入者進入此頁面*/
           //提示 1 : 可用轉址的方式，讓未登入的使用者轉址到 logIn.html
-          //提示 2 : 請在 <span id="name" > 中顯示使用者名稱，在 <span id="role">中顯示角色  
-      
-    });
+          //提示 2 : 請在 <span id="name" > 中顯示使用者名稱，在 <span id="role">中顯示角色 
+          var currentUser = Parse.User.current();
+          if (currentUser) {
+            console.log(currentUser);
+            // do stuff with the user
+            $('#name').text(currentUser.attributes.username);
+            $('#role').text(currentUser.attributes.role);
+          } else {
+            // show the signup or login page
+            alert("您尚未登入，即將前往登入頁面。");
+            window.location = "logIn.html";
+            return null;
+          }
+    }); 
+
   
-    $(document).on('click',"#logOut",function(){
+    $(document).on('click','#logOut',function(){
       console.log("Logout clicked");
       /* 執行登出動作，並轉址到 logIn 頁面*/
         // 可參考 : https://parse.com/docs/js/guide#users-current-user
-
+      Parse.User.logOut();
+      window.location = "logIn.html";
+      return null;
       /* 結束 */
     });
 
