--- a/logIn.html
+++ b/logIn.html
@@ -18,39 +18,20 @@
       var username = $('#username').val() ;
       var password = $('#password').val() ;
 
-
-    // 用 Parse.User.current() 判定使用者是否是登入的狀態，這裏還沒登入，會是 null
-      console.log("登入之前的 Parse.User.current()  : ", Parse.User.current() /*請完成程式碼部分*/) ;
-
       Parse.User.logIn( username , password , {
         success: function(user) {
-        // 到 console 看看 Parse.User.current()  的東西
-          console.log("登入之後的 Parse.User.current()  : ", Parse.User.current()/*請完成程式碼部分*/) ;
-          var currentUser = Parse.User.current();
-          alert('登入成功');
-          var name = currentUser.attributes.username;
-          var role = currentUser.attributes.role;
-          
-          var AttendantList = Parse.Object.extend("AttendantList");
-          var allAttendantListQuery = new Parse.Query(AttendantList);
-          
-          if(role==="student"){  
-            var attendantList = new AttendantList();
-            attendantList.set("name", name);
-            attendantList.save(null, {
-              success: function(attendantList) {
-                console.log(attendantList);
-                alert("簽到成功");
-              },
-              error: function(attendantList, error) {
-                // console.log(error);
-                // alert(error.message);
-              }
-            });
-          }
+          user.set("attend", true);
+          user.save(null, {
+            success: function(user) {
+              console.log(user);
+            },
+            error: function(user, error) {
+              console.log(error);
+            }
+          });
+          alert('登入成功，已簽到。');
           window.location = "index.html";
           return null;
-        // window.location = 'courseList.html' ;
       },
         error: function(user, error) {
           console.log(error) ;
