--- a/attendantList.html
+++ b/attendantList.html
@@ -25,22 +25,17 @@
         return null;
       }
 
-      var AttendantList = Parse.Object.extend("AttendantList");
-      var allAttendantListQuery = new Parse.Query(AttendantList);
-
-      allAttendantListQuery.find({
-        success: function(ListArray) {
-          console.log(ListArray);
-          for(var i=0; i<ListArray.length; i++){
-            attendantList = ListArray[i];
-            $('#table').append('<tr data-courseid="'+ attendantList.id +'">\
-                    <td>'+ attendantList.get('name') +'</td>\
+      var query = new Parse.Query(Parse.User);
+      query.equalTo("attend", true);
+      query.equalTo("role", "student");
+      query.find({
+        success: function(attendArray) {
+          for (var i = 0; i<attendArray.length; i++) {
+            var attendance = attendArray[i];
+            $('#table').append('<tr data-courseid="'+ attendance.id +'">\
+                    <td>'+ attendance.attributes.username +'</td>\
                   </tr>');
           }
-        },
-        error: function(error) {
-          console.log(error) ;
-          alert(error.message);
         }
       });
       console.log('document ready');
